# Circat_AKAKS6I2_VSTi_V1.0

./: .gitignore  CMakeLists.txt  README.md  S612_Graphic_Design_Briefing.md  S612_SystemPrompt_DSP_Engineer.md  S612_SystemPrompt_Gabi_UI_KI.md  S612_SystemPrompt_JUCE_Developer.md  S612_UI_Design_Spec.md  S612_UI_Graphics_Checklist.md  S612_VST_Briefing_v2_Exakt.docx  build.bat  build_current.bat  build_ui_v2.py  build_ui_v3.py  configure.bat  crop_assets.py  generate_plugin_editor.py  generate_ui.py
.opencode/skills/Barbara_DSP/: SKILL.md
.opencode/skills/Gabi_UI/: SKILL.md
.opencode/skills/Ralle_C++/: SKILL.md
.opencode/skills/Rolf_DSP/: SKILL.md
Assets/: INTEGRATION_GUIDE.md  PREVIEW.html  README.md
Source/: CircuitBentFilter.cpp  CircuitBentFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  S612AnalogFilter.cpp  S612AnalogFilter.h  S612Engine.cpp  S612Engine.h  S612Parameters.cpp  S612Parameters.h  S612Voice.cpp  S612Voice.h  S612VoiceManager.cpp  S612VoiceManager.h
Source/UI/: S612FilterPanel.cpp  S612FilterPanel.h  S612Knob.cpp  S612Knob.h  S612LookAndFeel.cpp
backup_temp/: MANUAL.md
